@@ -80,6 +80,7 @@ x updated: `CONF.default_image_consumption` has changed a default value to `0`
 x updated: `U.parseXML(str, [replace])` and `String.parseXML([replace])` contains a new argument called `replace`
 x updated: `LOAD()` added a callback function
 x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)
+- updated: `EventEmitter2` supports a new argument `obj`, example: `U.EventEmitter2(obj)` or supports `.extend` method: `U.EventEmitter2.extend(proto)`
 
 - fixed: schemas validation
 - fixed: error handling in dynamic schemas
